--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="icon" href="%PUBLIC_URL%/logo.png" />
 
-    <title>Online shop</title>
+    <title>Luxory</title>
   </head>
   <body>
  
